# Motion-Planning-Methods-and-Algorithms_laboratory

./: README.md
Lab2/: publisher_member_function.py
Lab4/: README.md
Lab4/src/mapr_4_student/: package.xml  setup.cfg  setup.py
Lab4/src/mapr_4_student/launch/: bfs_launch.py  dfs_launch.py
Lab4/src/mapr_4_student/mapr_4_student/: bfs.py  bfs_backtrace.py  dfs.py  dfs_backtrace.py  grid_map.py
Lab4/src/mapr_4_student/rviz/: rviz_cfg.rviz
Lab5/: README.md
Lab5/src/mapr_5_student/: package.xml  setup.cfg  setup.py
Lab5/src/mapr_5_student/launch/: astar_launch.py
Lab5/src/mapr_5_student/mapr_5_student/: astar.py  grid_map.py  points.py
Lab6/: README.md
Lab6/src/mapr_6_student/: package.xml  setup.cfg  setup.py
Lab6/src/mapr_6_student/launch/: rrt_launch.py
Lab6/src/mapr_6_student/mapr_6_student/: points.py  rrt.py  rrt_vertices.py
Lab6/src/mapr_6_student/rviz/: rviz_cfg.rviz
Lab7/: README.md
Lab7/src/ompl_example_2d/src/: ompl_example_2d.cpp
rrt_star/: README.md
rrt_star/src/rrt_star/: package.xml  setup.cfg  setup.py
rrt_star/src/rrt_star/launch/: rrt_launch.py
rrt_star/src/rrt_star/rrt_star/: grid_map.py  rrt.py  rrt_vertices.py
